MFC r336199: Remove a duplicate check.

PR:	229663