sys/netinet/libalias/alias_irc.c
@@ -96,8 +96,7 @@ static int
 fingerprint(struct libalias *la, struct alias_data *ah)
 {
 
-	if (ah->dport == NULL || ah->dport == NULL || ah->lnk == NULL ||
-	    ah->maxpktsize == 0)
+	if (ah->dport == NULL || ah->lnk == NULL || ah->maxpktsize == 0)
 		return (-1);
 	if (ntohs(*ah->dport) == IRC_CONTROL_PORT_NUMBER_1
 	    || ntohs(*ah->dport) == IRC_CONTROL_PORT_NUMBER_2)
